--- a/server/src/pages/home/HomePage.ejs
+++ b/server/src/pages/home/HomePage.ejs
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title><%= title %></title>
+	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 	<style>
 		body {
@@ -53,19 +54,38 @@
 	<header>
 		<h1>Welcome to the Home Page</h1>
 		<nav>
-			<button onclick="logout()">Logout</button>
+			<% if (user) { %>
+				Hello <%= user.username %>!
+				<button onclick="logout()">Logout</button>
+			<% } else { %>
+				<button onclick="login()">Login</button>
+			<% } %>
 		</nav>
 	</header>
 
 	<main>
-		<p>This is the home page. You are logged in!</p>
 	</main>
 
 	<script>
-		function toggleForm() {
-			function logout () {
-				window.location.href = '/logout';
-			}
+		function login() {
+			window.location.href = '/login';
+		}
+
+		function logout() {
+			fetch('/api/users/logout', {
+				method: 'POST',
+				headers: { 'Content-Type': 'application/json' }
+			})
+			.then(response => {
+				if (response.ok) {
+					window.location.href = '/';
+				} else {
+					alert('Logout failed');
+				}
+			})
+			.catch(error => {
+				console.error('Error:', error);
+			});
 		}
 	</script>
 </body>
