--- a/server/src/pages/home/HomePage.ejs
+++ b/server/src/pages/home/HomePage.ejs
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title><%= title %></title>
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 	<style>
@@ -52,7 +53,7 @@
 </head>
 <body>
 	<header>
-		<h1>Welcome to the Home Page</h1>
+		<h1>Welcome to the Server Home Page</h1>
 		<nav>
 			<% if (user) { %>
 				Hello <%= user.username %>!
