--- a/server/views/pages/Profile.ejs
+++ b/server/views/pages/Profile.ejs
@@ -6,7 +6,7 @@
 	<!-- USERNAME -->
 	<div id='username-option' class='profile-option'>
 		<h4>Username</h4>
-		<span class="value"><%= params.user.username %></span>	
+		<span class="value"><%= user.username %></span>	
 	</div>
 
 	<dialog id='update-username-modal' class='modal'>
@@ -36,7 +36,7 @@
 	<!-- EMAIL -->
 	<div id='email-option' class='profile-option'>
 		<h4>Email Address</h4>
-		<span class="value"><%= params.user.email %></span>
+		<span class="value"><%= user.email %></span>
 	</div>
 
 	<dialog id='update-email-modal' class='modal'>
